Fix the default covers border.

--- a/booksexchange/static/css/style.css
+++ b/booksexchange/static/css/style.css
@@ -1301,3 +1301,7 @@ em {
 .groups_list .book_cover {
   margin-right: 1.5em;
 }
+
+.event .default_cover {
+  border: none;
+}
